find the interval generalization error with 95% confidence

--- a/California-housing-price.ipynb
+++ b/California-housing-price.ipynb
@@ -3782,6 +3782,28 @@
    "source": [
     "try to compute a *95% confidence interval* for the generalization error"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45799.63048088, 49632.55148291])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confidence = 0.95\n",
+    "squared_error = (final_predictions - y_test)**2\n",
+    "np.sqrt(stats.t.interval(confidence, len(squared_error)-1, loc=squared_error.mean(), scale=stats.sem(squared_error)))"
+   ]
   }
  ],
  "metadata": {
